[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "uedge_mvu"
authors = [
    {name = "Maxim Umansky", email = "umansky1@llnl.gov"},
]
description = "UEDGE tools"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ['h5py', 'mppl', 'forthon', 'uedge', 'matplotlib', 
                'numpy', 'scipy', 'pandas', 'shapely']

version = "0.1"
